--- a/.github/workflows/testRigor.yml
+++ b/.github/workflows/testRigor.yml
@@ -1,4 +1,4 @@
-§ This is a basic workrow to neo vou get started with Actions
+# This is a basic workrow to neo vou get started with Actions
 name: testRigor
 
 # Controls when the workflow will run
